--- a/Pomodoro App/index.html
+++ b/Pomodoro App/index.html
@@ -20,25 +20,25 @@
                 <div>
                     <h3 class="text-center">Pomodoro:</h3>
                     <label class="flex" for="pomodoro-total">
-                        <input id="pomodoro-total" type="text" placeholder="25' default">
+                        <input id="pomodoro-total" type="text" placeholder="25' Default">
                     </label>
                 </div>
                 <div>
                     <h3 class="text-center">Short Break:</h3>
                     <label class="flex" for="short-break">
-                        <input id="short-break" type="text" placeholder="5' default">
+                        <input id="short-break" type="text" placeholder="5' Default">
                     </label>
                 </div>
                 <div>
                     <h3 class="text-center">Long Break:</h3>
                     <label class="flex" for="long-break">
-                        <input id="long-break" type="text" placeholder="15' default">
+                        <input id="long-break" type="text" placeholder="15' Default">
                     </label>
                 </div>
                 <div>
                     <h3 class="text-center">Pomodoro Rounds:</h3>
                     <label class="flex" for="pomodoro-rounds">
-                        <input id="pomodoro-rounds" type="text" placeholder="4 default">
+                        <input id="pomodoro-rounds" type="text" placeholder="4 Default">
                     </label>
                 </div>
                 <div>
@@ -82,7 +82,7 @@
                 <div class="todo-list flex">
                     <label for="">
                         <input type="checkbox" name="" id="">
-                        <input type="text" placeholder="edit">
+                        <input type="text" placeholder="Edit">
                     </label>
                     <button>Done</button>
                     <button>Delete</button>
