--- a/Pomodoro App/index.html
+++ b/Pomodoro App/index.html
@@ -43,7 +43,9 @@
                 </div>
                 <div>
                     <h3 class="pomodoro-timer__comments display-none text-center">Ready?</h3>
-                    <h2 class="pomodoro-timer text-center">25:00</h2>
+                    <h2 class="pomodoro-timer text-center">
+                        <span class="pomodoro-minutes">25</span>:<span class="pomodoro-seconds">00</span>
+                    </h2>
                     <div class="flex">
                         <!-- <button>pause</button> -->
                         <button class="pomodoro-timer__start-button">start</button>
