--- a/Pomodoro App/index.html
+++ b/Pomodoro App/index.html
@@ -43,6 +43,7 @@
                 </div>
                 <div>
                     <h3 class="pomodoro-timer__comments display-none text-center">Ready?</h3>
+                    <h3 class="pomodoro-timer__cycle display-none text-center"></h3>
                     <h2 class="pomodoro-timer text-center">
                         <span class="pomodoro-minutes">25</span>:<span class="pomodoro-seconds">00</span>
                     </h2>
