--- a/Pomodoro App/index.html
+++ b/Pomodoro App/index.html
@@ -48,8 +48,8 @@
                         <span class="pomodoro-minutes">25</span>:<span class="pomodoro-seconds">00</span>
                     </h2>
                     <div class="flex">
-                        <!-- <button>pause</button> -->
                         <button class="pomodoro-timer__start-button">start</button>
+                        <button class="pomodoro-timer__pause-button display-none">pause</button>
                         <button class="pomodoro-timer__reset-button">reset</button>
                     </div>
                 </div>
