--- a/Advanced_JS/Pomodoro App/index.html
+++ b/Advanced_JS/Pomodoro App/index.html
@@ -45,7 +45,7 @@
                     <h3 class="pomodoro-timer__comments display-none text-center">Ready?</h3>
                     <h3 class="pomodoro-timer__cycle display-none text-center"></h3>
                     <h2 class="pomodoro-timer text-center">
-                        <span class="pomodoro-minutes">25</span>:<span class="pomodoro-seconds">00</span>
+                        <span class="pomodoro-minutes"></span>:<span class="pomodoro-seconds"></span>
                     </h2>
                     <div class="flex">
                         <button class="pomodoro-timer__start-button">start</button>
